--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,7 @@
     <meta property="og:image" content="{{ post.urlImages.original }}" ng-if="post" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.corriente-alterna.com{{ $state.href($state.current.name) }}" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
 
     <!-- build:css css/style.min.css -->
@@ -64,38 +63,62 @@
     Para mejorar la experiencia..
 </p>
 <![endif]-->
-    <header class="header">
+    <header class="header"> 
         <div class="navbar-info">
             <div class="container">
-                <div class="col-sm-3 col-md-4 nav-info ca-phone">
-                    <a href="tel:{{initConfig.phone}}"><i class="icon ion-ios-telephone-outline"></i> {{initConfig.phone}}</a>
+                <div class="col-sm-3 nav-info ca-phone">
+                    <a href="tel:015555589899"><i class="icon ion-ios-telephone-outline"></i> 01 (55) 55 58 98 99</a>
                 </div>
-                <div class="col-sm-3 col-md-3 nav-info">
-                    <a href="mailto:{{initConfig.email}}"><i class="icon ion-ios-email-outline"></i> {{initConfig.email}}</a>
+                <div class="col-sm-3 nav-info ca-phone">
+                    <a href="mailto:info@moons.mx}"><i class="icon ion-email"></i> info@moons.mx</a>                
                 </div>
-                <div class="col-sm-6 col-md-5 ca-auth" ng-controller="AccessCtrl as Access">
-                    <ul class="nav navbar-nav nav-main navbar-right ">
-                        <li> 
-                            <a ui-sref="register" class="my-account" ng-if="!Access.isAuthenticated()">
-                                <i class="ion-ios-person-outline"></i> Iniciar sesión
+                <div class="col-sm-6 ca-auth">
+                    <ul class="list-social-media">
+                        <li><a href=""><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa fa-youtube"></i></a></li>
+                        <li><a href=""><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="middle-space">
+            <div class="container">
+                <div class="col-sm-3 text-left">
+                    <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Corriente Alterna"></a>
+                </div>
+                <div class="col-sm-5">
+                    <form name="search" class="search-prd">
+                        <div class="form-group">
+                            <input type="text" class="form-search" id="search" placeholder="Buscar">
+                            <i class="ion-ios-search"></i>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-sm-4"  ng-controller="AccessCtrl as Access">
+                    <ul class="nav navbar-nav nav-user navbar-right ">                      
+                        <li>
+                            <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
+                                <span class="qty-cart">{{ items.length }}</span>
+                                <i class="icon ion-ios-cart-outline"></i><span class="hidden-xs"></span>
+                            </a>
+                        </li>
+                        <li>  
+                            <a ui-sref="register" class="my-account btn-blue" ng-if="!Access.isAuthenticated()">
+                                <i class="ion-ios-person"></i> Iniciar sesión
                             </a>
                         </li>
                         <li  class="dropdown">
                             <a  ng-if="Access.isAuthenticated()" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                <i class="ion-ios-person-outline"></i> {{user.username}} 
+                                <i class="ion-ios-person"></i> {{user.username}} 
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <li><a ui-sref="dashboard">Mi cuenta</a></li>
                                 <li><a href="" ng-click="Access.logout()">Cerrar sesión</a></li>
                             </ul>
-                        </li>
-                        <li><div class="divider-main"></div></li>
-                        <li>
-                            <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce" ng-controller="AccessCtrl as Access">
-                                <span class="qty-cart">{{ items.length }}</span>
-                                <i class="icon ion-ios-cart-outline"></i><span class="hidden-xs">Carrito</span>
-                            </a>
                         </li>
                     </ul>
                 </div>
@@ -106,20 +129,16 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainMenu" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                    <div class="navbar-brand">
-                        <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Corriente Alterna"></a>
-                        <a ui-sref="home"><img src="img/logo.jpg" class="logo-white" alt="Corriente Alterna"></a>
-                    </div>
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
 
                 <div class="collapse navbar-collapse" id="header-mainMenu">
-                    <ul class="nav navbar-nav nav-main navbar-right">
+                    <ul class="nav navbar-nav nav-main">
                         <!--<li ng-repeat="item in mainNavMenu">-->
                         <li ng-repeat="item in mainNavMenu">
                             <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
