--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title ng-bind="pageTitle">Moon's Aquariums</title>
+    <title ng-bind="pageTitle">Guaumart - ¡El súper para los MVZ!</title>
     <meta name="description" content="{{ post.excerpt }}">
     <meta name="keywords" content="">
     <meta name="theme-color" content="{{ initConfig.meta_color }}">
@@ -37,6 +37,7 @@
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.14/angular-aria.js"></script>
+    <script src="lib/angular-elevate-zoom/dist/angular-elevate-zoom.min.js"></script>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="lib/animate.css/animate.css" />
@@ -45,7 +46,6 @@
     <link rel="stylesheet" href="lib/lightbox2/dist/css/lightbox.css" />
     <link rel="stylesheet" href="lib/angular-block-ui/dist/angular-block-ui.css" />
     <link rel="stylesheet" href="lib/angular-toasty/dist/angular-toasty.css" />
-    <link rel="stylesheet" href="lib/sweetalert/dist/sweetalert.css" />
     <link rel="stylesheet" href="lib/angular-ui-select/dist/select.css" />
     <link rel="stylesheet" href="lib/ng-table/dist/ng-table.css" />
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.css" />
@@ -77,8 +77,12 @@
     <div class="navbar-info">
         <div class="container">
             <div class="col-sm-4 nav-info ca-phone">
-                <a href="tel:018007143764"><i class="icon ion-ios-telephone-outline"></i> 01 800 714 3764</a>
-                <a href="tel:018007143759">y 01 800 714 3759</a>
+                <ul class="list list-social list-social-media">
+                    <li ng-repeat="post in contactMenuData">
+                        <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
+                                ng-bind-html="post.content | trustHtml"></span></a>
+                    </li>
+                </ul>
             </div>
             <div class="col-sm-5 nav-info xs-hide" ng-controller="GetQuerySearchCtrl as Search">
                 <form name="search" class="search-prd" role="search" class="search-prd"
@@ -150,25 +154,53 @@
             </div>
             <div class="col-sm-3 ca-auth">
                 <ul class="list-social-media">
-                    <li><a href="https://www.facebook.com/MoonsCDMX/" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <li ng-repeat="post in socialMedia">
+                        <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
+                                ng-bind-html="post.content | trustHtml"></span></a>
                     </li>
-                    <li><a href="https://twitter.com/MOONS_AQUARIUMS" target="_blank"><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li><a href="https://www.instagram.com/moonsmexico/" target="_blank"><i class="fa fa-instagram"></i></a>
-                    </li>
-                    <li><a href="https://www.youtube.com/channel/UCgJdfLAt97jVXdVlzlZNlhQ" target="_blank"><i
-                            class="fa fa-youtube"></i></a></li>
-                    <li><a href="https://plus.google.com/u/0/108069455211883825420" target="_blank"><i
-                            class="fa fa-google-plus"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/moons-mexico-179aa1145/" target="_blank"><i
-                            class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
     </div>
+    <div class="container login-content">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="col-sm-4 no-padding">
+            <a ui-sref="home">
+                <img src="img/guaumart-logo.png" class="logo" alt="Moons Aquariums"><br>
+                <span class="slogan">¡El Súper para los MVZ!</span>
+            </a>
+        </div>
+        <div class="col-sm-8">
+            <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
+                <li>
+                    <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce"
+                       ng-controller="AccessCtrl as Access">
+                        <span class="qty-cart">{{ items.length }}</span>
+                        <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
+                    </a>
+                </li>
+                <li>
+                    <a ui-sref="register" class="my-account btn-blue" ng-if="!Access.isAuthenticated()">
+                        <i class="ion-ios-person"></i> Iniciar sesión
+                    </a>
+                </li>
+                <li class="dropdown">
+                    <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button"
+                       id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        <i class="ion-ios-person"></i> {{user.username}}
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a ui-sref="dashboard">Mi cuenta</a></li>
+                        <li><a href="" ng-click="Access.logout()">Cerrar sesión</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
     <nav class="navbar navbar-default" ng-controller="NavBarCtrl as nav">
         <div class="container container-tab">
-            <!-- Brand and toggle get grouped for better mobile display -->
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#header-mainMenu"
                         aria-expanded="false">
@@ -177,39 +209,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <div class="navbar-brand">
-                    <a ui-sref="home"><img src="img/logo.jpg" class="logo" alt="Moons Aquariums"></a>
-                </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-
             <div class="collapse navbar-collapse" id="header-mainMenu">
-                <ul class="nav navbar-nav nav-user navbar-right" ng-controller="AccessCtrl as Access">
-                    <li>
-                        <a ui-sref="shopcart" class="text-right shopping-cart" ng-if="ecommerce"
-                           ng-controller="AccessCtrl as Access">
-                            <span class="qty-cart">{{ items.length }}</span>
-                            <i class="icon ion-ios-cart"></i><span class="hidden-xs"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a ui-sref="register" class="my-account btn-blue" ng-if="!Access.isAuthenticated()">
-                            <i class="ion-ios-person"></i> Iniciar sesión
-                        </a>
-                    </li>
-                    <li class="dropdown">
-                        <a ng-if="Access.isAuthenticated()" class="dropdown-toggle btn-blue" type="button"
-                           id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            <i class="ion-ios-person"></i> {{user.username}}
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a ui-sref="dashboard">Mi cuenta</a></li>
-                            <li><a href="" ng-click="Access.logout()">Cerrar sesión</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav nav-main navbar-right">
+                <ul class="nav navbar-nav nav-main navbar-left">
                     <!--<li ng-repeat="item in mainNavMenu">-->
                     <li ng-repeat="item in mainNavMenu">
                         <a href="{{ item.link }}" ng-click="nav.close()">{{ item.name }}</a>
@@ -237,6 +239,7 @@
 <!-- build:js js/vendor.min.js -->
 <!-- bower:js -->
 <script src="lib/jquery/dist/jquery.js"></script>
+<script src="lib/angular/angular.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
@@ -254,14 +257,13 @@
 <script src="lib/angular-truncate/src/truncate.js"></script>
 <script src="lib/angular-touch/angular-touch.js"></script>
 <script src="lib/ngstorage/ngStorage.js"></script>
-<script src="lib/sweetalert/dist/sweetalert.min.js"></script>
 <script src="lib/ngSweetAlert/SweetAlert.js"></script>
 <script src="lib/satellizer/dist/satellizer.js"></script>
 <script src="lib/angular-ui-select/dist/select.js"></script>
 <script src="lib/ng-table/dist/ng-table.js"></script>
 <script src="lib/angular-messages/angular-messages.js"></script>
+<script src="lib/angular-aria/angular-aria.js"></script>
 <script src="lib/angular-material/angular-material.js"></script>
-<script src="lib/angular/angular.js"></script>
 <script src="lib/SHA-1/sha1.js"></script>
 <script src="lib/angulartics/src/angulartics.js"></script>
 <script src="lib/angulartics-google-analytics/lib/angulartics-ga.js"></script>
@@ -300,87 +302,6 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-101539944-1', {'cookieDomain': 'none'});
-</script>
-<script>
-    !function (f, b, e, v, n, t, s) {
-        if (f.fbq) return;
-        n = f.fbq = function () {
-            n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-        };
-        if (!f._fbq) f._fbq = n;
-        n.push = n;
-        n.loaded = !0;
-        n.version = '2.0';
-        n.queue = [];
-        t = b.createElement(e);
-        t.async = !0;
-        t.src = v;
-        s = b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t, s)
-    }(window,
-        document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '342725962844328');
-    fbq('track', 'PageView');
-</script>
-<!--Start of Zendesk Chat Script-->
-<script type="text/javascript">
-    window.$zopim || (function (d, s) {
-        var z = $zopim = function (c) {
-            z._.push(c)
-        }, $ = z.s =
-            d.createElement(s), e = d.getElementsByTagName(s)[0];
-        z.set = function (o) {
-            z.set._.push(o)
-        };
-        z._ = [];
-        z.set._ = [];
-        $.async = !0;
-        $.setAttribute("charset", "utf-8");
-        $.src = "https://v2.zopim.com/?57UWbcIGahudxsF0fGGc497kpCWb2TEO";
-        z.t = +new Date;
-        $.type = "text/javascript";
-        e.parentNode.insertBefore($, e)
-    })(document, "script");
-</script>
-<!--End of Zendesk Chat Script-->
-<script>!function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
-    if (!d.getElementById(id)) {
-        js = d.createElement(s);
-        js.id = id;
-        js.src = p + "://platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    }
-}(document, "script", "twitter-wjs");</script>
-
-<!-- WhatsHelp.io widget -->
-<script type="text/javascript">
-    (function () {
-        var options = {
-            facebook: "MoonsEnMexico", // Facebook page ID
-            whatsapp: "+5215570516895", // WhatsApp number
-            email: "hola@moons.mx", // Email
-            sms: "+5215570516895", // Sms phone number
-            call: "+5215555589023", // Call phone number
-            company_logo_url: "//moons.mx/img/logo.jpg", // URL of company logo (png, jpg, gif)
-            greeting_message: "Hola, estamos listos para atenderte, tienes alguna pregunta?", // Text of greeting message
-            call_to_action: "Contáctanos", // Call to action
-            button_color: "#129BF4", // Color of button
-            position: "left", // Position may be 'right' or 'left'
-            order: "facebook,whatsapp,sms,call,email" // Order of buttons
-        };
-        var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
-        var s = document.createElement('script');
-        s.type = 'text/javascript';
-        s.async = true;
-        s.src = url + '/widget-send-button/js/init.js';
-        s.onload = function () {
-            WhWidgetSendButton.init(host, proto, options);
-        };
-        var x = document.getElementsByTagName('script')[0];
-        x.parentNode.insertBefore(s, x);
-    })();
 </script>
 <!-- /WhatsHelp.io widget -->
 </body>
