--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://www.sydgroup.mx{{ $state.href($state.current.name) }}"/>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
     <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet"/>
     <!-- build:css css/style.min.css -->
     <!-- bower:css -->
@@ -217,22 +218,6 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-53555832-10', {'cookieDomain': 'none'});
-</script>
-<!-- /WhatsHelp.io widget -->
-<script type="text/javascript">
-    (function () {
-        var options = {
-            whatsapp: "+52 1 33 2257 3971", // WhatsApp number
-            company_logo_url: "https://www.sydgroup.mx/img/logo.png", // URL of company logo (png, jpg, gif)
-            greeting_message: "Hola, estamos listos para atenderte, tienes alguna pregunta?", // Text of greeting message
-            call_to_action: "Contáctanos", // Call to action
-            position: "right", // Position may be 'right' or 'left'
-        };
-        var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
-        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
-        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
-        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-    })();
 </script>
 </body>
 </html>
